@@ -947,7 +947,7 @@ class DirectionsQuestionnaireGeneratorTest {
                 caseData.getRespondent1DQ().setRespondent1DQExperts(experts);
                 DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
 
-                Expert extracted = templateData.getExperts().getDetails().get(0);
+                Expert extracted = templateData.getExperts().getDetails().getFirst();
                 assertThat(extracted.getName()).isEqualTo(expert1.getName());
                 assertThat(extracted.getFieldOfExpertise()).isEqualTo(expert1.getFieldOfExpertise());
                 assertThat(extracted.getWhyRequired()).isEqualTo(expert1.getWhyRequired());
@@ -1265,7 +1265,6 @@ class DirectionsQuestionnaireGeneratorTest {
                 caseData.setAllocatedTrack(AllocatedTrack.SMALL_CLAIM);
                 caseData.setResponseClaimTrack(SpecJourneyConstantLRSpec.SMALL_CLAIM);
                 caseData.setResponseClaimWitnesses(Integer.toString(2));
-                DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
 
                 assertThat(!caseData.isRespondent1NotRepresented()).isFalse();
             }
@@ -1456,22 +1455,11 @@ class DirectionsQuestionnaireGeneratorTest {
 
             private String getHearingLength(DQ dq) {
                 var hearing = dq.getHearing();
-                switch (hearing.getHearingLength()) {
-                    case LESS_THAN_DAY:
-                        return hearing.getHearingLengthHours() + " hours";
-                    case ONE_DAY:
-                        return "One day";
-                    default:
-                        return hearing.getHearingLengthDays() + " days";
-                }
-            }
-
-            private HearingSupport getSupportRequirements() {
-                HearingSupport hearingSupport = new HearingSupport();
-                hearingSupport.setRequirements(List.of());
-                hearingSupport.setSupportRequirements(YES);
-                hearingSupport.setSupportRequirementsAdditional("Additional support needed");
-                return hearingSupport;
+                return switch (hearing.getHearingLength()) {
+                    case LESS_THAN_DAY -> hearing.getHearingLengthHours() + " hours";
+                    case ONE_DAY -> "One day";
+                    default -> hearing.getHearingLengthDays() + " days";
+                };
             }
 
             private String getHearingSupport(DQ dq) {
@@ -1818,7 +1806,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1862,7 +1850,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1906,7 +1894,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1956,7 +1944,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -2000,7 +1988,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -2055,7 +2043,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -2420,14 +2408,11 @@ class DirectionsQuestionnaireGeneratorTest {
 
             private String getHearingLength(DQ dq) {
                 var hearing = dq.getHearing();
-                switch (hearing.getHearingLength()) {
-                    case LESS_THAN_DAY:
-                        return hearing.getHearingLengthHours() + " hours";
-                    case ONE_DAY:
-                        return "One day";
-                    default:
-                        return hearing.getHearingLengthDays() + " days";
-                }
+                return switch (hearing.getHearingLength()) {
+                    case LESS_THAN_DAY -> hearing.getHearingLengthHours() + " hours";
+                    case ONE_DAY -> "One day";
+                    default -> hearing.getHearingLengthDays() + " days";
+                };
             }
 
             private String getHearingSupport(DQ dq) {
@@ -2828,16 +2813,18 @@ class DirectionsQuestionnaireGeneratorTest {
                 .businessProcess(new BusinessProcess().setCamundaEvent("CLAIMANT_RESPONSE"))
                 .build();
 
-            String statementOfTruth = "The claimant believes that the facts in this claim are true."
-                + "\n\n\nI am duly authorised by the claimant to sign this statement.\n\n"
-                + "The claimant understands that the proceedings for contempt of court "
-                + "may be brought against anyone who makes, or causes to be made, "
-                + "a false statement in a document verified by a statement of truth "
-                + "without an honest belief in its truth.";
+            String statementOfTruth = String.join("",
+                "The claimant believes that the facts in this claim are true.",
+                "\n\n\nI am duly authorised by the claimant to sign this statement.",
+                "\n\nThe claimant understands that the proceedings for contempt of court ",
+                "may be brought against anyone who makes, or causes to be made, ",
+                "a false statement in a document verified by a statement of truth ",
+                "without an honest belief in its truth."
+            );
 
             DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
-            assertNotEquals(caseData.getCaseAccessCategory(), SPEC_CLAIM);
-            assertEquals(templateData.getStatementOfTruthText(), statementOfTruth);
+            assertNotEquals(SPEC_CLAIM, caseData.getCaseAccessCategory());
+            assertEquals(statementOfTruth, templateData.getStatementOfTruthText());
         }
 
         @Test
@@ -2855,16 +2842,18 @@ class DirectionsQuestionnaireGeneratorTest {
                 .businessProcess(new BusinessProcess().setCamundaEvent("DEFENDANT_RESPONSE"))
                 .build();
 
-            String statementOfTruth = "The defendant believes that the facts stated in the response are true."
-                + "\n\n\nI am duly authorised by the defendant to sign this statement.\n\n"
-                + "The defendant understands that the proceedings for contempt of court "
-                + "may be brought against anyone who makes, or causes to be made, "
-                + "a false statement in a document verified by a statement of truth "
-                + "without an honest belief in its truth.";
+            String statementOfTruth = String.join("",
+                "The defendant believes that the facts stated in the response are true.",
+                "\n\n\nI am duly authorised by the defendant to sign this statement.",
+                "\n\nThe defendant understands that the proceedings for contempt of court ",
+                "may be brought against anyone who makes, or causes to be made, ",
+                "a false statement in a document verified by a statement of truth ",
+                "without an honest belief in its truth."
+            );
 
             DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
-            assertNotEquals(caseData.getCaseAccessCategory(), SPEC_CLAIM);
-            assertEquals(templateData.getStatementOfTruthText(), statementOfTruth);
+            assertNotEquals(SPEC_CLAIM, caseData.getCaseAccessCategory());
+            assertEquals(statementOfTruth, templateData.getStatementOfTruthText());
         }
     }
 }
